Fix the right padding of the header on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -87,6 +87,9 @@
         margin-top: 0px;
     }
     
+    header .wrapper {
+        padding-right: 0px;
+    }
 }
 
 .site-nav {
